infinite loop solved

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <body>
   <h1>Web Crawl Me/Index</h1>
   <ul>
-      <a href="/webcrawler/html/path1.html">path 1</a>
+      <a href="/html/path1.html">path 1</a>
     </li>
     <li>
-      <a href="/webcrawler/html/path2.html">path 2</a>
+      <a href="/html/path2.html">path 2</a>
     </li>
     <li>
-      <a href="/webcrawler/html/path3.html">path 3</a>
+      <a href="/html/path3.html">path 3</a>
     </li>
   </ul>
 </body>
