--- a/html/path1.html
+++ b/html/path1.html
@@ -9,13 +9,16 @@
   <h1>Web Crawl Me/path1</h1>
   <ul>
     <li>
-      <a href="/webcrawler/">Index</a>
+      <a href="/index.html">Index</a>
     </li>
     <li>
-      <a href="/webcrawler/html/path2.html">path 2</a>
+      <a href="/html/path2.html">path 2</a>
     </li>
     <li>
-      <a href="/webcrawler/html/path3.html">path 3</a>
+      <a href="/html/path3.html">path 3</a>
+    </li>
+    <li>
+      <a href="https://www.ancientworldmagazine.com/articles/glued-linen-armour/">path armor</a>
     </li>
   </ul>
 </body>
