Revert "infinite loop solved"
This reverts commit 96c30b0a0693861bf3aefeccc4c210fb3eb6663b.

--- a/html/path1.html
+++ b/html/path1.html
@@ -9,16 +9,13 @@
   <h1>Web Crawl Me/path1</h1>
   <ul>
     <li>
-      <a href="/index.html">Index</a>
+      <a href="/webcrawler/">Index</a>
     </li>
     <li>
-      <a href="/html/path2.html">path 2</a>
+      <a href="/webcrawler/html/path2.html">path 2</a>
     </li>
     <li>
-      <a href="/html/path3.html">path 3</a>
-    </li>
-    <li>
-      <a href="https://www.ancientworldmagazine.com/articles/glued-linen-armour/">path armor</a>
+      <a href="/webcrawler/html/path3.html">path 3</a>
     </li>
   </ul>
 </body>
