--- a/html/path3.html
+++ b/html/path3.html
@@ -9,13 +9,13 @@
   <h1>Web Crawl Me/path3</h1>
   <ul>
     <li>
-      <a href="/index.html">Index</a>
+      <a href="/webcrawler/">Index</a>
     </li>
     <li>
-      <a href="/html/path1.html">path 1</a>
+      <a href="/webcrawler/html/path1.html">path 1</a>
     </li>
     <li>
-      <a href="/html/path2.html">path 2</a>
+      <a href="/webcrawler/html/path2.html">path 2</a>
     </li>
   </ul>
 </body>
